--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-bootstrap-daterange",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "ember server",
     "build": "ember build",
-    "test": "ember test"
+    "test": "ember try:testall"
   },
   "repository": "https://github.com/wedgex/ember-bootstrap-daterange",
   "engines": {
@@ -16,20 +16,37 @@
   },
   "author": "Hunter Haydel",
   "license": "MIT",
+  "dependencies": {
+    "ember-cli-babel": "^5.1.3",
+    "ember-cli-htmlbars": "0.7.9",
+    "ember-cli-version-checker": "^1.1.4"
+  },
   "devDependencies": {
-    "broccoli-asset-rev": "^1.0.0",
-    "broccoli-ember-hbs-template-compiler": "^1.6.1",
-    "ember-cli": "0.2.3",
-    "ember-cli-content-security-policy": "0.3.0",
-    "ember-cli-dependency-checker": "0.0.6",
-    "ember-cli-esnext": "0.1.1",
-    "ember-cli-ic-ajax": "0.1.1",
-    "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.1.2",
-    "ember-data": "1.0.0-beta.12",
-    "ember-export-application-global": "^1.0.0",
+    "codeclimate-test-reporter": "^0.1.1",
+    "broccoli-asset-rev": "^2.1.2",
+    "ember-cli-blanket": "0.5.3",
+    "ember-cli": "1.13.8",
+    "ember-cli-app-version": "0.5.0",
+    "ember-cli-content-security-policy": "0.4.0",
+    "ember-cli-dependency-checker": "^1.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.2.0",
+    "ember-cli-ic-ajax": "0.2.1",
+    "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-release": "0.2.3",
+    "ember-cli-sri": "^1.0.3",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-cli-moment-shim": "0.6.2",
+    "ember-data": "1.13.8",
+    "ember-disable-proxy-controllers": "^1.0.0",
+    "ember-export-application-global": "^1.0.3",
+    "ember-disable-prototype-extensions": "^1.0.0",
+    "ember-try": "0.0.6",
+    "broccoli-babel-transpiler": "5.4.5",
+    "ember-cli-qunit": "1.0.1",
     "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "glob": "^4.0.5",
+    "debug": "~2.2.0",
+    "ember-moment": "3.6.2"
   },
   "description": "Ember component for using https://github.com/dangrossman/bootstrap-daterangepicker",
   "keywords": [
