--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -44,7 +44,9 @@
     "andThen",
     "currentURL",
     "currentPath",
-    "currentRouteName"
+    "currentRouteName",
+    "moment",
+    "blanket"
   ],
   "node": false,
   "browser": false,
