--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "moment": "^2.10.6",
-    "bootstrap-daterangepicker": "git@github.com:chauhansudhir/bootstrap-daterangepicker.git",
+    "bootstrap-daterangepicker": "~2.0.11",
     "qunit": "~1.17.1",
     "blanket": "~1.1.5",
     "ember-qunit": "0.4.10",
